This commit was manufactured by cvs2svn to create branch 'squirrel- 2_3-final_branch'.